--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/edward-hong/todo-svelte-koa#readme",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@koa/router": "^9.4.0",
     "@sendgrid/mail": "^7.3.0",
     "crypto": "^1.0.1",
