--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "start": "sirv public --single"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
     "rollup": "^2.3.4",
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.1.2",
     "page": "^1.11.6",
     "sirv-cli": "^1.0.0"
   }
