--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node server/index.js",
-    "server": "nodemon server/index.js",
+    "server": "nodemon --ignore 'client/*' server/index.js",
     "client": "npm run dev --prefix client",
     "dev": "concurrently -n server,client \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
