--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node server/index.js",
-    "server": "nodemon --ignore 'client/*' server/index.js",
-    "client": "npm run dev --prefix client",
-    "dev": "concurrently -n server,client \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -37,7 +34,6 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
     "nodemon": "^2.0.6"
   }
 }
