--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
-    "dev": "nodemon index.js"
+    "start": "NODE_ENV=production node server/index.js",
+    "server": "nodemon --ignore 'client/*' server/index.js",
+    "client": "npm run dev --prefix client",
+    "dev": "concurrently -n server,client \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -29,11 +32,10 @@
     "koa": "^2.13.0",
     "koa-async-validator": "^0.4.1",
     "koa-bodyparser": "^4.3.0",
-    "koa-router": "^9.4.0",
-    "koa-send": "^5.0.1",
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
+    "concurrently": "^7.0.0",
     "nodemon": "^2.0.6"
   }
 }
